--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+     <h1>Hello</h1>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple static website with NGINX</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
