--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
      <h1>Hello World!</h1>
+     <h2> Welcome to the GitHub<h2>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple static website with NGINX</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
